# merge-guard

./: .gitignore  Dockerfile  Makefile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  merge_guard_demo.ipynb  pyproject.toml
artifacts/grade_results/: results_20260628_230025.html  results_20260628_230025.json  results_20260628_230219.html  results_20260628_230219.json  results_20260628_230443.html  results_20260628_230443.json  results_20260629_102759.html  results_20260629_102759.json  results_20260629_130710.html  results_20260629_130710.json  results_20260629_131259.html  results_20260629_131259.json  results_20260629_132141.html  results_20260629_132141.json  results_20260702_204009.html  results_20260702_204009.json
artifacts/traces/: generated_traces.json
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
frontend/: main.py  pyproject.toml
merge_guard/: agent.py  config.py  fast_api_app.py
merge_guard/app_utils/: .requirements.txt  reasoning_engine_adapter.py  services.py  telemetry.py  typing.py
merge_guard/review_skills/performance-leaks/: SKILL.md
merge_guard/review_skills/security-auditing/: SKILL.md
merge_guard/review_skills/testing-gaps/: SKILL.md
scratch/: test_real_pr.py  trigger_playground_run.py
tests/eval/: eval_config.yaml  generate_traces.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent.py  test_server_e2e.py
tests/unit/: test_agent_unit.py
