[project]
name = "submission_frontend"
version = "0.1.0"
description = "Engineering Quality Dashboard service for Pull Request Triage Agent"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk>=2.0.0",
    "google-cloud-aiplatform>=1.40.0",
    "requests>=2.31.0",
    "google-auth>=2.28.0",
]

[tool.uv]
dev-dependencies = []
